--- a/pages/cuentanueva.html
+++ b/pages/cuentanueva.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- link de bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <!--link de css-->
     <link rel="stylesheet" href="../css/main.css">
     <!--link de la tipografia-->
@@ -18,45 +21,33 @@
     <!--seccion superior de la pagina, encabezado-->
     <header>
         <!--menu de secciones-->
-        <nav class="menu">
-            <ul>
-                <!--este es el logo de la marca y a su vez un boton de home-->
-                <a href="../index.html">
-                    <img src="../img/LOGO sin CSS.png" alt="logo y boton de home"width="250px">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">
+                  <img src="../img/LOGO sin CSS.png" alt="logo y boton de home"width="150px">
                 </a>
-                <div class="secciones">
-                    <li>
-                        <a href="../pages/tienda.html">
-                            Tienda
-                        </a>
+                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"data-bs-target="#navbarSupportedContent"aria-controls="navbarSupportedContent" aria-expanded="false"aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                 </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item dropdown">
+                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      <img src="../img/desplegable.png" alt="boton menu desplegable"width="25px">
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="../pages/tienda.html">Tienda</a>
                     </li>
-
-                    <li>
-                        <a href="../pages/lookbook.html">
-                            lookbook
-                        </a>
+                    <li><a class="dropdown-item" href="../pages/lookbook.html">Lookbook</a>
                     </li>
-                    
-                    <li>
-                        <a href="../pages/usuario.html">
-                            Iniciar sesión
-                        </a>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="../pages/usuario.html">Iniciarsesion</a>
                     </li>
-
-                    <li>
-                        <a href="../pages/passrecover.html">
-                            Recuperar contraseña
-                        </a>
+                    <li><a class="dropdown-item" href="../pages/cuentanueva.html">Registrarse</a>
                     </li>
-
-                    <li>
-                        <a href="../pages/cuentanueva.html">
-                            Registrarse
-                        </a>
+                    <li><a class="dropdown-item" href="../pages/passrecover.html">Recuperar contraseña</a>
                     </li>
-                </div>
-            </ul>
-        </nav>
+            </nav>
     </header>
 
     <main class="cuentaNueva">
@@ -151,5 +142,8 @@
         </div>
     </footer>
     
+
+    <!--link de js bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
