--- a/pages/usuario.html
+++ b/pages/usuario.html
@@ -78,67 +78,71 @@
         </form>
     </main>
 
-    <footer class="footer">   
-        <!--div para redes sociales-->
-        <div class="redesSociales">
-            <h4>
-                Entérate más de Outlaws Amsterdam en nuestras redes sociales
-            </h4>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="https://www.facebook.com/outlaws.amsterdam" target="blank">
-                            <img src="../img/home/facebook logo.jpg" alt="logo de facebook" width="35px">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/outlaws.amsterdam/"target="blank">
-                            <img src="../img/home/instagram logo.jpg" alt="logo de instagram" width="40px">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.tiktok.com/@outlaws.amsterdam"target="blank">
-                            <img src="../img/home/tiktok logo.jpg" alt="logo de tiktok" width="40px">
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-
-        <!--div para seccion de ayuda y politicas-->
-        <div class="ayudaFooter">
-            <h4>¿Necesitas ayuda?</h4>
-            <nav>
-                <ul>
-                    <p>Información de la compañía</p>
-                    <p>Guía de tallas de anillo</p>
-                    <p>Contacto</p>
-                    <p>Preguntas más frecuentes</p>
-                </ul>
-            </nav>
-            <img src="../img/tarjetas.jpg" alt="tarjetas aceptadas">
-        </div>
-
-        <!--div para suscripcion al newsletter-->
-        <div class="newsletter">
-            <p>Suscribete para recibir nuestras novedades</p>
-            <form action="">
-                <div>
-                    <input type="email" name="suscripcionEmail" placeholder="Email">
+    <div class="container-fluid">
+        <section class="row ">
+            <footer class=" col-12 footer d-flex justify-content-between">   
+                <!--div para redes sociales-->
+                <div class="redesSociales">
+                    <h4>
+                        Entérate más de Outlaws Amsterdam en nuestras redes sociales
+                    </h4>
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="https://www.facebook.com/outlaws.amsterdam" target="blank">
+                                    <img src="../img/home/facebook logo.jpg" alt="logo de facebook" width="35px">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.instagram.com/outlaws.amsterdam/"target="blank">
+                                    <img src="../img/home/instagram logo.jpg" alt="logo de instagram" width="40px">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.tiktok.com/@outlaws.amsterdam"target="blank">
+                                    <img src="../img/home/tiktok logo.jpg" alt="logo de tiktok" width="40px">
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
-                <div>
-                    <input type="submit" value="Suscribirse">
+            
+                <!--div para seccion de ayuda y politicas-->
+                <div class="ayudaFooter">
+                    <h4>¿Necesitas ayuda?</h4>
+                    <nav>
+                        <ul>
+                            <p>Información de la compañía</p>
+                            <p>Guía de tallas de anillo</p>
+                            <p>Contacto</p>
+                            <p>Preguntas más frecuentes</p>
+                        </ul>
+                    </nav>
+                    <img src="../img/tarjetas.jpg" alt="tarjetas aceptadas">
                 </div>
-            </form>
-        </div>
-        <!--div para seccion de derechos y boton de volver al inicio-->
-        <div class="derechos">
-            <h5>© 2021 | Todos los derechos reservados</h5>
-            <a href="#home">
-                © OUTLAWS AMSTERDAM
-            </a>
-        </div>
-    </footer>
+            
+                <!--div para suscripcion al newsletter-->
+                <div class="newsletter">
+                    <p>Suscribete para recibir nuestras novedades</p>
+                    <form action="">
+                        <div>
+                            <input type="email" name="suscripcionEmail" placeholder="Email">
+                        </div>
+                        <div>
+                            <input type="submit" value="Suscribirse">
+                        </div>
+                    </form>
+                </div>
+                <!--div para seccion de derechos y boton de volver al inicio-->
+                <div class="derechos">
+                    <h5>© 2021 | Todos los derechos reservados</h5>
+                    <a href="#home">
+                        © OUTLAWS AMSTERDAM
+                    </a>
+                </div>
+            </footer>
+        </section>
+    </div>
 
     <!--link de js bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
